New API Strings

--- a/config/locales/po/de/api.po
+++ b/config/locales/po/de/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-17 13:12-0609\n"
+"PO-Revision-Date: 2014-11-17 13:12-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: de <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: de <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -32,8 +32,8 @@ msgstr ""
 "#-#-#-#-#  share.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:06-0600\n"
-"PO-Revision-Date: 2014-09-25 16:06-0600\n"
+"POT-Creation-Date: 2014-11-10 12:33-0609\n"
+"PO-Revision-Date: 2014-11-10 12:33-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: de <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -43,10 +43,10 @@ msgstr ""
 "Generated-By: Babel 1.3\n"
 
 msgid "moment.badge.earned.self.title"
-msgstr "Du hast das <b>&quot;{title}&quot;</b>-Abzeichen erhalten"
+msgstr "Du hast das <b>\"{title}\"</b>-Abzeichen erhalten"
 
 msgid "moment.badge.earned.title"
-msgstr "{name} das <b>&quot;{title}&quot;</b> Abzeichen erhalten"
+msgstr "{name} das <b>\"{title}\"</b> Abzeichen erhalten"
 
 msgid "moment.bible.download.self.title"
 msgstr "Du hast die <b>{version}</b> heruntergeladen."
@@ -59,6 +59,9 @@ msgstr "Du hast ein Lesezeichen für <b>{reference_human}</b> angelegt."
 
 msgid "moment.bookmark.title"
 msgstr "{name} hat ein Lesezeichen für <b>{reference_human}</b> angelegt"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Bereite dich auf Weihnachten vor - mit einem Leseplan für den Advent"
 
 msgid "moment.friendship.self.title"
 msgstr "Du bist nun mit <b>{friend_name}</b> befreundet"
@@ -88,7 +91,7 @@ msgid "moment.plan_segment_completion.body"
 msgstr "Tag {segment} von {total_segments} ({percent_complete}%)"
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "Du hast Tag <b>{segment}</b> des Leseplans <b>{title}</b> abgeschlossen"
+msgstr "Du hast Tag <b>{segment}</b> von <b>{title}</b> abgeschlossen."
 
 msgid "moment.plan_segment_completion.title"
 msgstr "{name} hat Tag <b>{segment}</b> des Leseplans <b>{title}</b> abgeschlossen"
@@ -231,6 +234,9 @@ msgstr "{name} hat einen neuen Plan begonnen - und zwar \"{title}\""
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} hat einen neuen Bibelleseplan begonnen - und zwar \"{title}\""
 
+msgid "notifications.people.contact.joined"
+msgstr "{name} ist gerade YouVersion beigetreten. Tippe darauf, um sie/ihn als Freund hinzuzufügen."
+
 msgid "notifications.system.test"
 msgstr "Lade unsere Bibel App für Kinder jetzt herunter!!!"
 
@@ -240,13 +246,13 @@ msgstr "<p>Hallo!</p><p>Ich benutze die Bibel App von YouVersion und möchte sie
 msgid "share.invite_email_body"
 msgstr ""
 "Hallo! \n"
-"Ich benutze die Bibel App von YouVersion sehr gern und dachte, sie könnte dir auch gefallen. Mit der App kann man das Schöne und die Wahrheit in der Bibel in den Alltag holen.\n"
+"Ich benutze die Bibel App von YouVersion gern und dachte, sie könnte dir auch gefallen. Mit der App kann man die Schönheit und Wahrheit der Bibel in den Alltag holen.\n"
 "\n"
 "Lade sie dir herunter: zum Lesen, Ansehen und Zuhören. Mit ihr kann man die Bibel auch ganz leicht übers Smartphone, Tablet oder online auf Bible.com teilen. \n"
 "\n"
 "Lege dir ein kostenloses Konto an. Dann kannst du Lesepläne abonnieren und du hast Zugriff auf deine Lesezeichen, Markierungen und Notizen - auf allen Geräten.\n"
 "\n"
-"Füge Freunde hinzu (wie zum Beispiel mich!): erforsche und diskutiere mit deinen Freunden über die Bibel.\n"
+"Füge Freunde hinzu (wie zum Beispiel mich!): erforsche die Bibel und dann diskutiere mit deinen Freunden darüber.\n"
 "\n"
 "All das findest du in der Bibel - hier geht's los: "
 
