--- a/config/locales/po/es_ES/api.po
+++ b/config/locales/po/es_ES/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-17 13:12-0609\n"
+"PO-Revision-Date: 2014-11-17 13:12-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es_ES <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es_ES <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -98,6 +98,9 @@ msgstr "Comenzó un plan de lectura"
 
 msgid "moment.plan_subscription.title"
 msgstr "{name} comenzó un plan de lectura"
+
+msgid "moment.system.bafk.title"
+msgstr "Ayude a sus hijos a enamorarse de la Palabra de Dios."
 
 msgid "moment.system.bible_series_promo.body"
 msgstr "¡Mira las <i>Series bíblicas</i> esta noche!"
@@ -230,6 +233,9 @@ msgstr "{name} comenzó un nuevo plan de lectura, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} comenzó un nuevo plan de lectura bíblica, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} acaban de unirse a YouVersion. Pulsa para añadirles como Amigos."
 
 msgid "notifications.system.test"
 msgstr "¡Descarga nuestra Biblia App para niños!"
