--- a/config/locales/po/sk/api.po
+++ b/config/locales/po/sk/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:15-0600\n"
-"PO-Revision-Date: 2014-09-25 16:15-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: sk <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
@@ -59,6 +59,9 @@ msgstr "Pridali ste si <b>{reference_human}</b> medzi svoje záložky"
 
 msgid "moment.bookmark.title"
 msgstr "Používateľ {name} pridal <b>{reference_human}</b> medzi svoje záložky"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Pripravte sa na Vianoce s adventným plánom čítania Biblie"
 
 msgid "moment.friendship.self.title"
 msgstr "Odteraz ste priateľom s používateľom <b>{friend_name}</b>"
@@ -231,6 +234,9 @@ msgstr "Používateľ {name} začal nový plán čítania, {title}"
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "Používateľ {name} začal nový plán čítania Biblie, {title}"
 
+msgid "notifications.people.contact.joined"
+msgstr "Používateľ {name} sa práve pripojil na YouVersion. Ťuknutím si ho pridáte k priateľom."
+
 msgid "notifications.system.test"
 msgstr "Stiahnite si Aplikáciu Biblia pre deti!!!"
 
@@ -271,6 +277,3 @@ msgstr "Aplikáciu Biblia od @YouVersion mám na domovskej obrazovke. Čítaj, s
 
 msgid "share.invite_twitter_direct"
 msgstr "Máš aplikáciu Biblia od @YouVersion? Ja ju rád používam a myslím, že sa ti bude tiež páčiť. Tu je odkaz:"
-
-msgid "notifications.people.contact.joined"
-msgstr "Používateľ {name} sa práve pripojil na YouVersion. Ťuknutím si ho pridáte k priateľom."
