--- a/config/locales/po/af/api.po
+++ b/config/locales/po/af/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: af <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: af <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Jy het die <b>{reference_human}</b> geboekmerk"
 
 msgid "moment.bookmark.title"
 msgstr "{name} het die <b>{reference_human}</b> geboekmerk"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Wees gereed vir Kersfees met 'n Advent Bybelplan."
 
 msgid "moment.friendship.self.title"
 msgstr "Jy is nou vriende met <b>{friend_name}</b>"
@@ -230,6 +233,9 @@ msgstr "{name} het 'n nuwe Plan begin, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} het 'n nuwe Bybelplan begin, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} het nou-net by YouVersion aangesluit. Druk om hulle as 'n Vriend by te voeg."
 
 msgid "notifications.system.test"
 msgstr "Laai nou jou Kinder Bybel toepassing af!!!"
