--- a/config/locales/po/cs/api.po
+++ b/config/locales/po/cs/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: cs <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: cs <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
@@ -59,6 +59,9 @@ msgstr "Uložil jste záložku <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} uložil záložku <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Připravte se na vánoce s naším Adventním plánem čtení Bible"
 
 msgid "moment.friendship.self.title"
 msgstr "Stali jste se přáteli s <b>{friend_name}</b>"
@@ -230,6 +233,9 @@ msgstr "Uživatel {name} začal nový plán, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "Uživatel {name} začal nový plán čtení Bible, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} právě začal(a) používat Youversion. Přidejte si jej(jí) jako přítele."
 
 msgid "notifications.system.test"
 msgstr "Stáhněte si aplikaci Kids Bible App právě teď!!!"
