--- a/config/locales/po/es/api.po
+++ b/config/locales/po/es/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Usted marcó <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} marcó <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Prepárese para la Navidad con un Plan de Lectura sobre el Adviento"
 
 msgid "moment.friendship.self.title"
 msgstr "Usted es ahora amigo de <b>{friend_name}</b>"
@@ -98,6 +101,9 @@ msgstr "Ha iniciado un plan"
 
 msgid "moment.plan_subscription.title"
 msgstr "{name} ha iniciado un plan"
+
+msgid "moment.system.bafk.title"
+msgstr "Ayude a sus hijos a enamorarse de la Palabra de Dios."
 
 msgid "moment.system.bible_series_promo.body"
 msgstr "¡Vea la <i>Serie La Biblia</i> esta noche!"
@@ -230,6 +236,9 @@ msgstr "{name} comenzó un nuevo Plan, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} comenzó un nuevo Plan Bíblico, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} acaba de unirse a YouVersion. Oprima para agregarlos como un Amigo."
 
 msgid "notifications.system.test"
 msgstr "¡¡¡Descargue ya La Biblia App Para Niños!!!"
