--- a/config/locales/po/fr/api.po
+++ b/config/locales/po/fr/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-17 13:13-0609\n"
+"PO-Revision-Date: 2014-11-17 13:13-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -59,6 +59,9 @@ msgstr "Vous avez mis <b>{reference_human}</b> en favori"
 
 msgid "moment.bookmark.title"
 msgstr "{name} a mis <b>{reference_human}</b> en favori"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Préparez-vous pour Noël avec un Plan de Lecture de l'Avent."
 
 msgid "moment.friendship.self.title"
 msgstr "Vous êtes maintenant ami avec  <b>{friend_name}</b>"
