--- a/config/locales/po/id/api.po
+++ b/config/locales/po/id/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: id <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Anda telah memarkahi <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} telah memarkahi <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Bersiap untuk Natal dengan Rencana Alkitab Adven"
 
 msgid "moment.friendship.self.title"
 msgstr "Anda sekarang berteman dengan <b>{friend_name}</b>"
@@ -231,6 +234,9 @@ msgstr "{name} telah memulai Rencana baru, {title}"
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} telah memulai Rencana Alkitab baru, {title}"
 
+msgid "notifications.people.contact.joined"
+msgstr "{name} baru saja bergabung di YouVersion. Tekan untuk menambah mereka sebagai Teman."
+
 msgid "notifications.system.test"
 msgstr "Unduhlah Aplikasi Alkitab Anak kami sekarang!!!"
 
@@ -271,6 +277,3 @@ msgstr "Aplikasi Alkitab dari @YouVersion mempunyai tempat tetap di layar utama 
 
 msgid "share.invite_twitter_direct"
 msgstr "Apakah Anda memiliki Aplikasi Alkitab dari @YouVersion? Saya menyukainya, dan saya pikir Anda akan meyukainya juga. Inilah tautannya:"
-
-msgid "notifications.people.contact.joined"
-msgstr "{name} baru saja bergabung di YouVersion. Tekan untuk menambah mereka sebagai Teman."
