--- a/config/locales/po/ja/api.po
+++ b/config/locales/po/ja/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ja <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ja <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -59,6 +59,9 @@ msgstr "<b>{reference_human}</b>にブックマークしました"
 
 msgid "moment.bookmark.title"
 msgstr "{name}さんが<b>{reference_human}</b>にブックマークしました"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "クリスマスに向けて、待降節の読書プランをどうぞ。"
 
 msgid "moment.friendship.self.title"
 msgstr "お友達になりました：<b>{friend_name}</b>さん"
@@ -230,6 +233,9 @@ msgstr "{name}さんが新しいプラン「{title}」を開始しました。"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name}さんが新しい読書プラン「{title}」を開始しました。"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name}さんがYouVersionに登録しました。タップして友だちに追加しましょう。"
 
 msgid "notifications.system.test"
 msgstr "キッズ聖書アプリを今すぐダウンロード!!"
