--- a/config/locales/po/mk/api.po
+++ b/config/locales/po/mk/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: mk <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Вие го обележавте <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} го обележа <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Подгответе се за Божиќ читајќи го Адвентниот библиски план"
 
 msgid "moment.friendship.self.title"
 msgstr "Сега вие сте пријатели со <b>{friend_name}</b>"
@@ -231,6 +234,9 @@ msgstr "{name} започна нов план за читање, {title}"
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} започна нов план за читање на Библијата, {title}"
 
+msgid "notifications.people.contact.joined"
+msgstr "{name} само што се приклучи на YouVersion. Допри за да го додадеш како пријател"
+
 msgid "notifications.system.test"
 msgstr "Преземете ја нашата апликација „Библија“ за деца сега!!!"
 
@@ -263,6 +269,3 @@ msgstr "Апликацијата „Библија“ од @YouVersion има п
 
 msgid "share.invite_twitter_direct"
 msgstr "Дали ја имаш апликацијата „Библија“ од @YouVersion? Многу ми се допаѓа и мислам дека и на тебе ќе ти се допадне. Можеш да ја преземеш од тука:"
-
-msgid "notifications.people.contact.joined"
-msgstr "{name} само што се приклучи на YouVersion. Допри за да го додадеш како пријател"
