--- a/config/locales/po/nl/api.po
+++ b/config/locales/po/nl/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nl <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nl <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Je hebt <b>{reference_human}</b> bladwijzers"
 
 msgid "moment.bookmark.title"
 msgstr "{name} heeft <b>{reference_human}</b> een bladwijzer aangemaakt"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Bereid je voor op Kerst met een Advent Bijbelplan"
 
 msgid "moment.friendship.self.title"
 msgstr "Je bent nu bevriend met <b>{friend_name}</b>"
@@ -230,6 +233,9 @@ msgstr "{name} is een nieuw leesplan begonnen, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} is een nieuw Bijbel-leesplan begonnen, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} heeft zich aangemeldt bij YouVersion. Tik om hem/haar toe te voegen als vriend."
 
 msgid "notifications.system.test"
 msgstr "Download nu onze Kinder Bijbel App!!!"
