--- a/config/locales/po/no/api.po
+++ b/config/locales/po/no/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nb_NO <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nb_NO <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Du bokmerket <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} bokmerket <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Gjør deg klar for julen med en leseplan for advent"
 
 msgid "moment.friendship.self.title"
 msgstr "Du er nå venn med <b>{friend_name}</b>"
@@ -230,6 +233,9 @@ msgstr "{name} begynte på en ny leseplan, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} begynte på en ny bibelleseplan, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} ble akkurat medlem av YouVersion. Klikk for å legge til som venn."
 
 msgid "notifications.system.test"
 msgstr "Last ned vår Kids Bible App nå!!!"
