--- a/config/locales/po/sv/api.po
+++ b/config/locales/po/sv/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-11-10 12:34-0609\n"
+"PO-Revision-Date: 2014-11-10 12:34-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Du har bokmärkt <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} har bokmärkt <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Förbered dig inför jul med en läsplan om advent"
 
 msgid "moment.friendship.self.title"
 msgstr "Du är nu vän med <b>{friend_name}</b>"
@@ -230,6 +233,9 @@ msgstr "{name} har påbörjat en ny plan, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} har påbörjat en ny bibelplan, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} har precis registrerat sig på YouVersion. Tryck för att lägga till som vän."
 
 msgid "notifications.system.test"
 msgstr "Ladda ner vår Bibelapp för barn nu!!!"
