--- a/config/locales/po/tl/api.po
+++ b/config/locales/po/tl/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: fil_PH <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Ibinookmark mo ang <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "Ibinookmark ni {name} ang <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Maghanda para sa Pasko gamit ang Advent Bible Plan"
 
 msgid "moment.friendship.self.title"
 msgstr "Kayo ay magkaibigan na ni <b>{friend_name}</b>"
@@ -231,6 +234,9 @@ msgstr "Si {name} ay nagsimula ng bagong Plano, {title}"
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "Si {name} ay nagsimula ng bagong Biblikal na Plano, {title}"
 
+msgid "notifications.people.contact.joined"
+msgstr "Si {name} ay sumali na rin sa YouVersion. Tapikin upang idagdag sila bilang Kaibigan."
+
 msgid "notifications.system.test"
 msgstr "I-download ang Pambatang App ng Bibliya ngayon!!!"
 
@@ -271,6 +277,3 @@ msgstr "Ang @YouVersion Bible App ay bahagi na ng aking home screen. Magbasa, ma
 
 msgid "share.invite_twitter_direct"
 msgstr "Mayroon ka bang Bible App ng YouVersion? Gustong-gusto ko ito, at sa palagay ko'y magugustuhan mo rin. Heto ang link:"
-
-msgid "notifications.people.contact.joined"
-msgstr "Si {name} ay sumali na rin sa YouVersion. Tapikin upang idagdag sila bilang Kaibigan."
