--- a/config/locales/po/uk/api.po
+++ b/config/locales/po/uk/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:14-0600\n"
-"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"POT-Creation-Date: 2014-11-10 12:32-0609\n"
+"PO-Revision-Date: 2014-11-10 12:32-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: uk <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
@@ -59,6 +59,9 @@ msgstr "Ви додали у закладки <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} додав у закладки <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Підготуйтесь до Різдва з біблійним планом про пилипівський піст"
 
 msgid "moment.friendship.self.title"
 msgstr "Ви вже дружите з <b>{friend_name}</b>"
@@ -231,6 +234,9 @@ msgstr "Користувач {name} розпочав план, {title}"
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "Користувач {name} розпочав біблійний план, {title}"
 
+msgid "notifications.people.contact.joined"
+msgstr "{name} вже приєдналися до YouVersion. Натисніть, щоб додати їх як друзів."
+
 msgid "notifications.system.test"
 msgstr "Завантажуйте вже нашу програму Біблія для дітей!!!"
 
@@ -271,6 +277,3 @@ msgstr "Програма Біблія від @YouVersion має постійне
 
 msgid "share.invite_twitter_direct"
 msgstr "У вас є програма Біблія від @YouVersion? Я люблю її і думаю, що ви також полюбите її. Ось посилання:"
-
-msgid "notifications.people.contact.joined"
-msgstr "{name} вже приєдналися до YouVersion. Натисніть, щоб додати їх як друзів."
