Read full chapter string

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,6 +166,7 @@ en:
   badges title:                                 "Badges"
   currently selected:                           "Currently Selected:"
   read reference:                               "Read %{reference}"
+  read chapter:                                 "Read full chapter"
   compare all versions:                         "Compare All Versions"
   link will be added:                           "Will Be Added"
   my picture:                                   "Update My Picture"
