Pulled new API Strings

--- a/config/locales/po/fr/api.po
+++ b/config/locales/po/fr/api.po
@@ -20,8 +20,8 @@ msgstr ""
 "#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-25 16:21-0600\n"
-"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"POT-Creation-Date: 2014-12-02 16:16-0609\n"
+"PO-Revision-Date: 2014-12-02 16:16-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -233,6 +233,9 @@ msgstr "{name} a démarré un nouveau Plan, {title}"
 
 msgid "notifications.moments.create.plan_subscription.push"
 msgstr "{name} a démarré un nouveau Plan de Lecture Biblique, {title}"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} a rejoint YouVersion. Cliquez pour l'ajouter comme Ami."
 
 msgid "notifications.system.test"
 msgstr "Téléchargez maintenant notre Bible App pour enfants !!!"
