--- a/config/locales/po/it/api.po
+++ b/config/locales/po/it/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-09-26 14:14-0609\n"
-"PO-Revision-Date: 2014-09-26 14:14-0609\n"
+"POT-Creation-Date: 2014-12-02 16:14-0609\n"
+"PO-Revision-Date: 2014-12-02 16:14-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: it <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Hai contrassegnato <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} ha contrassegnato <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Preparati per il Natale con un Piano di Lettura per l'Avvento"
 
 msgid "moment.friendship.self.title"
 msgstr "Ora hai stretto amicizia con <b>{friend_name}</b>"
