--- a/config/locales/po/es_ES/api.po
+++ b/config/locales/po/es_ES/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-17 13:12-0609\n"
-"PO-Revision-Date: 2014-11-17 13:12-0609\n"
+"POT-Creation-Date: 2014-12-02 16:14-0609\n"
+"PO-Revision-Date: 2014-12-02 16:14-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es_ES <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -59,6 +59,9 @@ msgstr "Marcaste <b>{reference_human}</b>"
 
 msgid "moment.bookmark.title"
 msgstr "{name} marcó <b>{reference_human}</b>"
+
+msgid "moment.client_side.reading_plan_carousel.advent.title"
+msgstr "Prepárate para la Navidad con un Plan de la Biblia sobre el Adviento"
 
 msgid "moment.friendship.self.title"
 msgstr "Ahora eres amigo de <b>{friend_name}</b>"
