--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1079,7 +1079,7 @@ en:
   campaigns:
     christmas:
       tracker title:                            "Christmas Story Tracker"
-      twitter text:                             "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: http://christmas.youversion.com/"
+      twitter text:                             "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
       facebook text:                            "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
       verse:                                    "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
       read more:                                "Read more of the Christmas story<br>in the book of Luke"
