--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -223,6 +223,7 @@ en:
   note:                                         "New Note"
   selected:                                     "Selected"
   chapter:                                      "Chapter"
+  home:                                         "Home"
   bible:                                        "Bible"
   notes title:                                  "Notes"
   friends:                                      "Friends"
@@ -1083,13 +1084,14 @@ en:
       twitter text:                             "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
       facebook text:                            "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
       verse:                                    "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-      read more:                                "Read more of the Christmas story<br>in the book of Luke"
+      read more:                                "Read the amazing story of Christmas"
       read about:                               "Reading about the birth of Jesus"
       totals since:                             "YouVersion totals since December 1, 2014:"
       total installs:                           "Total installs on smartphones and tablets"
       download:                                 "Download the free Bible App"
       versions:                                 "Over %{version_count} versions in %{language_count} languages"
       tagline:                                  "the Bible that goes with you anywhere"
+      chapter counter format:                   "9,999,999"
     100m:
       logo:                                     "YouVersion: The Bible app"
       tagline:                                  "It starts with <em>100 million</em>"
